syntax = "proto3";

package yandex.cloud.priv.metastore.v1;

import "yandex/cloud/api/operation.proto";
import "yandex/cloud/priv/validation.proto";
import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/metastore/v1/cluster.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/metastore/v1;metastore";
option java_outer_classname = "MSCS";


// A set of methods for managing Metastore Cluster resources.
service ClusterService {
  // Returns the specified Metastore Cluster resource.
  //
  // To get the list of available Metastore Cluster resources, make a [List] request.
  rpc Get (GetClusterRequest) returns (Cluster) {
  }

  // Retrieves the list of Metastore Cluster resources that belong
  // to the specified folder.
  rpc List (ListClustersRequest) returns (ListClustersResponse) {
  }

  // Retrieves the list of Operation resources for the specified cluster.
  rpc ListOperations (ListClusterOperationsRequest) returns (ListClusterOperationsResponse) {
  }

  // Creates a Metastore cluster in the specified folder.
  rpc Create (CreateClusterRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "CreateClusterMetadata"
      response: "Cluster"
    };
  }

  // Deletes the specified Metastore cluster.
  rpc Delete (DeleteClusterRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "DeleteClusterMetadata"
      response: "google.protobuf.Empty"
    };
  }

}

message GetClusterRequest {
  // ID of the Metastore Cluster resource to return.
  // To get the cluster ID use a [ClusterService.List] request.
  string cluster_id = 1 [(required) = true, (length) = "<=50"];
}

message ListClustersRequest {
  // ID of the folder to list Metastore clusters in.
  // To get the folder ID, use a [yandex.cloud.resourcemanager.v1.FolderService.List] request.
  string folder_id = 1 [(required) = true, (length) = "<=50"];

  // The maximum number of results per page to return. If the number of available
  // results is larger than [page_size], the service returns a [ListClustersResponse.next_page_token]
  // that can be used to get the next page of results in subsequent list requests.
  int64 page_size = 2 [(value) = "<=1000"];

  // Page token. To get the next page of results, set [page_token] to the [ListClustersResponse.next_page_token]
  // returned by a previous list request.
  string page_token = 3 [(length) = "<=100"];

  // A filter expression that filters resources listed in the response.
  // The expression must specify:
  // 1. The field name. Currently you can only use filtering with the [Cluster.name] field.
  // 2. An operator. Can be either `=` or `!=` for single values, `IN` or `NOT IN` for lists of values.
  // 3. The value. Must be 1-63 characters long and match the regular expression `^[a-zA-Z0-9_-]+$`.
  string filter = 4 [(length) = "<=1000"];
}

message ListClustersResponse {
  // List of Metastore Cluster resources.
  repeated Cluster clusters = 1;

  // This token allows you to get the next page of results for list requests. If the number of results
  // is larger than [ListClustersRequest.page_size], use the [next_page_token] as the value
  // for the [ListClustersRequest.page_token] parameter in the next list request. Each subsequent
  // list request will have its own [next_page_token] to continue paging through the results.
  string next_page_token = 2;
}

message CreateClusterRequest {
  // ID of the folder to create the Metastore cluster in.
  string folder_id = 1 [(required) = true, (length) = "<=50"];

  // Name of the Metastore cluster. The name must be unique within the folder.
  string name = 2 [(required) = true, (length) = "<=63", (pattern) = "[a-zA-Z0-9_-]*"];

  // Description of the Metastore cluster.
  string description = 3 [(length) = "<=256"];

  // Custom labels for the Metastore cluster as `` key:value `` pairs. Maximum 64 per resource.
  // For example, "project": "mvp" or "source": "dictionary".
  map<string, string> labels = 4 [(priv.size) = "<=64", (length) = "<=63", (pattern) = "[-_0-9a-z]*", (map_key).length = "1-63", (map_key).pattern = "[a-z][-_0-9a-z]*"];

  // Subnet ids to put metastore servers
  repeated string subnet_ids = 6;

  // minimum number of metastore servers per zone
  int64 min_servers_per_zone = 7;

  // maximum number of metastore servers per zone
  int64 max_servers_per_zone = 8;

  // User security groups
  repeated string security_group_ids = 9;

  // Host groups to place VMs of cluster on.
  repeated string host_group_ids = 10;

  // Deletion Protection inhibits deletion of the cluster
  bool deletion_protection = 11;

  // Metastore server version
  string version = 12;
}

message CreateClusterMetadata {
  // ID of the Metastore cluster that is being created.
  string cluster_id = 1;
}

message DeleteClusterRequest {
  // ID of the Metastore cluster to delete.
  // To get the Metastore cluster ID, use a [ClusterService.List] request.
  string cluster_id = 1 [(required) = true, (length) = "<=50"];
}

message DeleteClusterMetadata {
  // ID of the Metastore cluster that is being deleted.
  string cluster_id = 1;
}

message ListClusterOperationsRequest {
    // ID of the Apache Kafka Cluster resource to list operations for.
    string cluster_id = 1 [(required) = true, (length) = "<=50"];

    // The maximum number of results per page to return. If the number of available
    // results is larger than [page_size], the service returns a [ListClusterOperationsResponse.next_page_token]
    // that can be used to get the next page of results in subsequent list requests.
    int64 page_size = 2 [(value) = "<=1000"];

    // Page token.  To get the next page of results, set [page_token] to the [ListClusterOperationsResponse.next_page_token]
    // returned by a previous list request.
    string page_token = 3 [(length) = "<=100"];
}

message ListClusterOperationsResponse {
    // List of Operation resources for the specified Apache Kafka cluster.
    repeated operation.Operation operations = 1;

    // This token allows you to get the next page of results for list requests. If the number of results
    // is larger than [ListClusterOperationsRequest.page_size], use the [next_page_token] as the value
    // for the [ListClusterOperationsRequest.page_token] query parameter in the next list request.
    // Each subsequent list request will have its own [next_page_token] to continue paging through the results.
    string next_page_token = 2;
}
